objects/WorkOrderNote__c.object
<CustomObject>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSRUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSR User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FSRNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSR_User_Name__c</fullName>
        <formula>FSRUser__r.FirstName + &apos; &apos; +  FSRUser__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSR User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>FSR Notes</relationshipLabel>
        <relationshipName>WorkOrderNotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Work Order Note</label>
    <nameField>
        <displayFormat>WL-{00000000}</displayFormat>
        <label>Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>